@@ -8,14 +8,12 @@ import com.queue.dto.RegionSortRequest;
 import com.queue.entity.Region;
 import com.queue.entity.SysUser;
 import com.queue.mapper.SysUserMapper;
+import com.queue.service.AuthContextService;
 import com.queue.service.RegionService;
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
@@ -28,11 +26,12 @@ import java.util.stream.Collectors;
 public class RegionController {
     private final RegionService regionService;
     private final SysUserMapper sysUserMapper;
+    private final AuthContextService authContextService;
 
     @GetMapping
-    public Result<List<Region>> listAll(@RequestParam(required = false) Long userId) {
+    public Result<List<Region>> listAll(HttpServletRequest request) {
         List<Region> regions = regionService.listAll();
-        List<Long> allowed = getAllowedRegionIds(userId);
+        List<Long> allowed = getAllowedRegionIds(authContextService.getCurrentUser(request));
         if (allowed == null) {
             return Result.ok(regions); // 不过滤
         }
@@ -46,9 +45,8 @@ public class RegionController {
     }
 
     @GetMapping("/list")
-    public Result<IPage<Region>> listPage(RegionPageRequest request,
-            @RequestParam(required = false) Long userId) {
-        List<Long> allowed = getAllowedRegionIds(userId);
+    public Result<IPage<Region>> listPage(RegionPageRequest request, HttpServletRequest httpRequest) {
+        List<Long> allowed = getAllowedRegionIds(authContextService.getCurrentUser(httpRequest));
         if (allowed != null && allowed.isEmpty()) {
             // 有权限限制但无区域 -> 返回空页
             return Result.ok(new com.baomidou.mybatisplus.extension.plugins.pagination.Page<>(request.getPageNum() != null ? request.getPageNum() : 1, request.getPageSize() != null ? request.getPageSize() : 10));
@@ -71,19 +69,19 @@ public class RegionController {
     }
 
     @GetMapping("/cities")
-    public Result<List<Region>> listCities(@RequestParam(required = false) Long userId) {
+    public Result<List<Region>> listCities(HttpServletRequest request) {
         List<Region> allCities = regionService.listByLevel("city");
-        if (userId == null || userId <= 0) {
+        SysUser currentUser = authContextService.getCurrentUser(request);
+        if (currentUser == null) {
             return Result.ok(allCities);
         }
-        SysUser user = sysUserMapper.selectById(userId);
-        if (user == null || "SUPER_ADMIN".equals(user.getRole())) {
+        if (authContextService.isSuperAdmin(currentUser)) {
             return Result.ok(allCities);
         }
-        if (user.getRegionCode() == null || user.getRegionCode().isEmpty()) {
+        if (currentUser.getRegionCode() == null || currentUser.getRegionCode().isEmpty()) {
             return Result.ok(List.of());
         }
-        Region userRegion = regionService.getByCode(user.getRegionCode());
+        Region userRegion = regionService.getByCode(currentUser.getRegionCode());
         Region city = userRegion;
         while (city != null && !"city".equals(city.getLevel())) {
             city = city.getParentId() != null ? regionService.getById(city.getParentId()) : null;
@@ -109,10 +107,9 @@ public class RegionController {
     }
 
     @GetMapping("/{parentId}/towns")
-    public Result<List<Region>> listTowns(@PathVariable Long parentId,
-            @RequestParam(required = false) Long userId) {
+    public Result<List<Region>> listTowns(@PathVariable Long parentId, HttpServletRequest request) {
         // 校验 parentId 在用户管辖范围内
-        List<Long> allowed = getAllowedRegionIds(userId);
+        List<Long> allowed = getAllowedRegionIds(authContextService.getCurrentUser(request));
         if (allowed != null && !allowed.isEmpty() && !allowed.contains(parentId)) {
             return Result.ok(Collections.emptyList()); // 无权访问该 parentId
         }
@@ -135,52 +132,49 @@ public class RegionController {
     }
 
     @PostMapping
-    public Result<Region> create(@RequestBody Region region,
-            @RequestParam(required = false) Long userId,
-            Authentication authentication) {
+    public Result<Region> create(@RequestBody Region region, HttpServletRequest request) {
+        SysUser currentUser = authContextService.requireCurrentUser(request);
         if ("city".equals(region.getLevel())) {
-            requireSuperAdmin(authentication);
+            requireSuperAdmin(currentUser);
         } else {
             // 非城市级：校验 parentId 在用户管辖范围内
-            requireParentRegionAccess(userId, region.getParentId(), authentication);
+            requireParentRegionAccess(currentUser, region.getParentId());
         }
         return Result.ok(regionService.create(region));
     }
 
     @PutMapping("/{id}")
-    public Result<Region> update(@PathVariable Long id, @RequestBody Region region,
-            @RequestParam(required = false) Long userId,
-            Authentication authentication) {
+    public Result<Region> update(@PathVariable Long id, @RequestBody Region region, HttpServletRequest request) {
+        SysUser currentUser = authContextService.requireCurrentUser(request);
         Region existing = regionService.getById(id);
         if (existing != null && "city".equals(existing.getLevel())) {
-            requireSuperAdmin(authentication);
+            requireSuperAdmin(currentUser);
         } else {
             // 非城市级：校验用户有权操作此区域
-            requireRegionAccess(userId, id, authentication);
+            requireRegionAccess(currentUser, id);
+            if (region.getParentId() != null) {
+                requireRegionAccess(currentUser, region.getParentId());
+            }
         }
         region.setId(id);
         return Result.ok(regionService.update(region));
     }
 
     @DeleteMapping("/{id}")
-    public Result<Void> delete(@PathVariable Long id,
-            @RequestParam(required = false) Long userId,
-            Authentication authentication) {
+    public Result<Void> delete(@PathVariable Long id, HttpServletRequest request) {
+        SysUser currentUser = authContextService.requireCurrentUser(request);
         Region existing = regionService.getById(id);
         if (existing != null && "city".equals(existing.getLevel())) {
-            requireSuperAdmin(authentication);
+            requireSuperAdmin(currentUser);
         } else {
-            requireRegionAccess(userId, id, authentication);
+            requireRegionAccess(currentUser, id);
         }
 
         // 区域管理员不能删除自己直接所属的区域
-        if (userId != null && userId > 0) {
-            SysUser user = sysUserMapper.selectById(userId);
-            if (user != null && "REGION_ADMIN".equals(user.getRole())) {
-                Region userRegion = regionService.getByCode(user.getRegionCode());
-                if (userRegion != null && userRegion.getId().equals(id)) {
-                    throw new com.queue.common.BusinessException(40003, "不能删除自己所属的区域");
-                }
+        if ("REGION_ADMIN".equals(currentUser.getRole())) {
+            Region userRegion = regionService.getByCode(currentUser.getRegionCode());
+            if (userRegion != null && userRegion.getId().equals(id)) {
+                throw new com.queue.common.BusinessException(40003, "不能删除自己所属的区域");
             }
         }
 
@@ -189,7 +183,18 @@ public class RegionController {
     }
 
     @PostMapping("/batch-sort")
-    public Result<Void> batchUpdateSort(@RequestBody List<RegionSortRequest> requests) {
+    public Result<Void> batchUpdateSort(@RequestBody List<RegionSortRequest> requests, HttpServletRequest request) {
+        SysUser currentUser = authContextService.requireCurrentUser(request);
+        if (!authContextService.isSuperAdmin(currentUser)) {
+            List<Long> allowed = getAllowedRegionIds(currentUser);
+            Set<Long> allowedSet = allowed == null ? Collections.emptySet() : new HashSet<>(allowed);
+            boolean hasForbidden = requests.stream()
+                    .map(RegionSortRequest::getId)
+                    .anyMatch(regionId -> regionId == null || !allowedSet.contains(regionId));
+            if (hasForbidden) {
+                throw new com.queue.common.BusinessException(40003, "包含无权限操作的区域");
+            }
+        }
         regionService.batchUpdateSort(requests);
         return Result.ok();
     }
@@ -198,77 +203,43 @@ public class RegionController {
      * Check if the current user is a SUPER_ADMIN.
      * Throws BusinessException if not.
      */
-    private void requireSuperAdmin(Authentication authentication) {
-        if (authentication == null) {
-            throw new com.queue.common.BusinessException(ResultCode.UNAUTHORIZED);
-        }
-        Collection<? extends GrantedAuthority> authorities = authentication.getAuthorities();
-        boolean isSuperAdmin = authorities.stream()
-                .anyMatch(a -> a.getAuthority().equals("ROLE_SUPER_ADMIN"));
-        if (!isSuperAdmin) {
+    private void requireSuperAdmin(SysUser currentUser) {
+        if (!authContextService.isSuperAdmin(currentUser)) {
             throw new com.queue.common.BusinessException(40003, "无权限操作市级区域");
         }
     }
 
     /**
      * Get allowed region IDs for a user.
-     * Returns null if no filtering needed (userId is null/0 or user is SUPER_ADMIN).
+     * Returns null if no filtering needed (public or SUPER_ADMIN).
      * Returns empty list if user has no region assigned.
      */
-    private List<Long> getAllowedRegionIds(Long userId) {
-        if (userId == null || userId <= 0) {
+    private List<Long> getAllowedRegionIds(SysUser user) {
+        if (user == null) {
             return null; // 不过滤
         }
-        SysUser user = sysUserMapper.selectById(userId);
-        if (user == null || "SUPER_ADMIN".equals(user.getRole())) {
-            return null; // 不过滤
+        Set<Long> allowed = authContextService.resolveAllowedRegionIds(user);
+        if (allowed == null) {
+            return null;
         }
-
-        List<Long> scopedRoots = sysUserMapper.selectRegionScopeIds(userId);
-        if (scopedRoots != null && !scopedRoots.isEmpty()) {
-            Set<Long> all = new HashSet<>();
-            for (Long rid : scopedRoots) {
-                if (rid == null) continue;
-                all.addAll(regionService.getDescendantRegionIds(rid));
-            }
-            return new ArrayList<>(all);
-        }
-
-        if (user.getRegionCode() == null || user.getRegionCode().isEmpty()) {
-            return Collections.emptyList();
-        }
-        Region userRegion = regionService.getByCode(user.getRegionCode());
-        if (userRegion == null) {
-            return Collections.emptyList();
-        }
-        return regionService.getDescendantRegionIds(userRegion.getId());
+        return List.copyOf(allowed);
     }
 
     /**
      * Check if user has access to a specific region.
      */
-    private void requireRegionAccess(Long userId, Long regionId, Authentication authentication) {
-        if (userId == null || userId <= 0) {
-            return;
-        }
-        SysUser user = sysUserMapper.selectById(userId);
-        if (user == null || "SUPER_ADMIN".equals(user.getRole())) {
-            return;
-        }
-        List<Long> allowed = getAllowedRegionIds(userId);
-        if (allowed == null || !allowed.contains(regionId)) {
-            throw new com.queue.common.BusinessException(40003, "无权限操作该区域");
-        }
+    private void requireRegionAccess(SysUser user, Long regionId) {
+        authContextService.assertRegionAccess(user, regionId);
     }
 
     /**
      * Check if user has access to create a region under a specific parent.
      */
-    private void requireParentRegionAccess(Long userId, Long parentId, Authentication authentication) {
+    private void requireParentRegionAccess(SysUser user, Long parentId) {
         if (parentId == null) {
             // 创建城市级 - 已有 requireSuperAdmin 处理
             return;
         }
-        requireRegionAccess(userId, parentId, authentication);
+        requireRegionAccess(user, parentId);
     }
 }
